# gx-in-the-ml-pipeline

./: .gitignore  LICENSE  README.md  cluster.yaml  compose.yaml
environment/: datadocs.Dockerfile  init_postgres.sql  mlflow.Dockerfile  notebook.Dockerfile  pyproject.toml  requirements.txt
environment/notebooks/: 01_Prep_data.ipynb  02_Develop_and_deploy_model.ipynb  03_Examine_data_drift.ipynb
environment/notebooks/demo_code/: data.py  log.py
img/: gx_in_the_ml_pipeline.drawio
mychart/: values.yaml
mychart/templates/: all.yaml
notebooks/: 01_Prep_data.ipynb  02_Develop_and_deploy_model.ipynb  02_Develop_model.ipynb  03_Examine_data_drift.ipynb  04_Monitoring_and_maintenance.ipynb  demo.ipynb
notebooks/demo_code/: __init__.py  data.py
utils/: clean_code.sh
