[tool.poetry]
name = "gx_in_the_ml_pipeline"
version = "0.0.1"
description = "Demo to showcase GX data validation in the ML pipeline"
authors = ["Rachel House <rhouse@hey.com>"]

[tool.poetry.dependencies]
python = "3.11.10"
pandas = "^2.1"
great-expectations = "^1.2.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.34"
ucimlrepo = "^0.0.7"
mlflow = "^2.17.1"
numpy = "1.26.4"
scikit-learn = "^1.5.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = {extras = ["jupyter"], version = "^24.10.0"}
ipykernel = "^6.29.5"
pytest = "^8.3.3"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"